fixed align problems with property review layout

--- a/src/pages/Property/styles.module.css
+++ b/src/pages/Property/styles.module.css
@@ -20,11 +20,18 @@
 }
 
 @media (min-width: 1024px) {
+  .container {
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    row-gap: 2rem;
+  }
   .section_wraper {
     display: flex;
     flex-direction: row;
     column-gap: 5rem;
     padding: 2rem;
+    max-width: 1200px;
   }
   .property_review{
     width: 60%;
